[gd_scene load_steps=8 format=3 uid="uid://dbh3bybyqjcjf"]

[ext_resource type="Script" path="res://entities/happy_boo/Player.gd" id="1_eks7j"]
[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://entities/happy_boo/player_animation/happy_boo.tscn" id="1_ndlbd"]
[ext_resource type="PackedScene" uid="uid://dqm05hiponili" path="res://entities/weapons/pistol.tscn" id="3_cs06x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t1wof"]
radius = 57.0088

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_snlr4"]
bg_color = Color(0.152941, 0.168627, 0.188235, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oei4a"]
bg_color = Color(0.388235, 0.8, 0.372549, 1)
border_color = Color(0.8, 0.8, 0.8, 0.172549)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="CircleShape2D" id="CircleShape2D_mdc8r"]
radius = 59.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(683.409, 367.654)
safe_margin = 40.0
script = ExtResource("1_eks7j")

[node name="HappyBoo" parent="." instance=ExtResource("1_ndlbd")]
unique_name_in_owner = true
position = Vector2(18, 25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(18, 4)
shape = SubResource("CircleShape2D_t1wof")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(18, 0)
zoom = Vector2(0.63, 0.63)
limit_smoothed = true

[node name="GUI" type="CanvasLayer" parent="Camera2D"]

[node name="Control" type="Control" parent="Camera2D/GUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 57.0175
offset_bottom = 57.0175
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/GUI/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -26.0
offset_right = 62.5
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HealthBar" type="ProgressBar" parent="Camera2D/GUI/Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_snlr4")
theme_override_styles/fill = SubResource("StyleBoxFlat_oei4a")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Pistol" parent="." instance=ExtResource("3_cs06x")]
position = Vector2(18, 0)
scale = Vector2(0.66778, 0.66778)

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(18, 4)
scale = Vector2(1.11632, 1.11632)
shape = SubResource("CircleShape2D_mdc8r")
debug_color = Color(0.996078, 0, 0.164706, 0.419608)
